# tauri-svite-app-template

./: .eslintrc.json  README.md  index.html  package.json  svelte.config.js  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
